# dev-secrets

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/skills/landing-page/: SKILL.md
.github/workflows/: ci.yml  pages.yml  release.yml
Formula/: devsecrets.rb
docs/: index.html  package-lock.json  package.json  script.js  tailwind.css
docs/src/: input.css
src/: cli.rs  clip.rs  commands.rs  config.rs  envfile.rs  fuzzy.rs  main.rs  meta.rs  model.rs  resolve.rs  store.rs  tui.rs
tests/: cli.rs
