[package]
name = "dev-secrets"
version = "0.1.0"
edition = "2021"
description = "A Telescope-style TUI and CLI for managing local development secrets, organized by project and environment."
license = "MIT"
repository = "https://github.com/peterkracik/dev-secrets"

[[bin]]
name = "devsecrets"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
dirs = "5"
indexmap = { version = "2", features = ["serde"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
strip = true
lto = true
